Update to 1.18.2 + Refactor